--- a/application/views/scripts/utilisateurs/index.phtml
+++ b/application/views/scripts/utilisateurs/index.phtml
@@ -112,7 +112,7 @@
                         	<?php
                         		if($this->voir_formation_dispo){
                         			echo '<img src="/images/livres-agenda-education-bibliotheque-icone-5155-48.png" class="img-left" />';
-									echo "<br /><a href='formation/listeformation?sansFormateur=true'>Liste des formation disponibles</a>";
+									echo "<br /><a href='formation/listeformation?sansFormateur=true'>Liste des formation disponibles (".$this->nombre_formation.")</a>";
 								}
 							?>
                             </div>
