--- a/application/views/scripts/formation/commander.phtml
+++ b/application/views/scripts/formation/commander.phtml
@@ -18,7 +18,7 @@
 					
 				<br />
 				<div class="separateur"></div>
-				<p>Je choisis les jours et les heures où je suis disponible pour ma formation <a title="Appuyer sur le nom du jour pour séléctionner toute la journée"><img src="<?php APPLICATION_PATH?>/images/aide-point-interrogation-soutien-icone-4653-16.png" /></a></p><br />
+				<p>Je choisis les jours et les heures où je suis disponible pour ma formation <a title="Un clic sur le nom du jour sélectionne toute la journée"><img src="<?php APPLICATION_PATH?>/images/aide-point-interrogation-soutien-icone-4653-16.png" /></a></p><br />
 				<div id="select_jour">
 					<div id="jour1" class="select_horaire" >
 						<span class="span_jour"></span>
@@ -340,13 +340,15 @@
 			<input type="submit" id="plus" value="Afficher sept jours supplémentaires" />
 			<div class="separateur"></div>
 			<div id="date_paiement">
-				<p><input type="radio" value="maintenant" name="date_payement" id="maintenant" /><label for="maintenant" >Je souhaite être débité maintenant.</label></p>
+				<!--
+<p><input type="radio" value="maintenant" name="date_payement" id="maintenant" /><label for="maintenant" >Je souhaite être débité maintenant.</label></p>
 				<p><input type="radio" value="jour_formation" name="date_payement" id="jour_formation" /><label for="jour_formation">Je souhaite être débité au jour de la formation (dans la limite de 1 mois maximum).</label></p>
+-->
 				
 				<br /><p><input type="checkbox" value="cgv" name="cgv" id="cgv" /><label for="cgv">J'ai pris connaissance des <a href="#">conditions générales de ventes</a>, et je les accepte.</label></p>
 			</div>
 			<br /> <br />
-				<input type='image' style="width : 150px;height : 50px; border : none;margin-left: 28em;margin-top: 5em;" name="submit" id="submit" src='https://www.paypal.com/fr_FR/i/btn/btn_xpressCheckout.gif' align='top' alt='Check out with PayPal'/>
+				<input type='submit' style="width : 150px;height : 50px; margin-left: 28em;margin-top: 5em;" name="submit" id="submit" value="Commander avec Paypal" align='top' alt='Check out with PayPal'/>
 				
 			<p id="info" style="display : none; color : green"></p>
 			<p id="error" style="display : none; color : red"></p>
@@ -361,7 +363,13 @@
 		// préparation et affichage des dates pour le choix de la formation
 		setDate();
 		
+		// Affiche une infobull au survol des liens
 		$("a").wTooltip();
+		
+		// Affiche une main au survol du nom des jours
+		$(".span_jour").hover(function(){
+			$(this).css('cursor','pointer');
+		});
 		
 		var selected;
 		$(".span_jour").click(function(){
