--- a/application/views/scripts/certifications/detailcertification.phtml
+++ b/application/views/scripts/certifications/detailcertification.phtml
@@ -15,15 +15,18 @@
 		<label for="recherche_question">Rechercher par une question</label><br />
 		<input type="text" id="recherche_question" />
 	</p>
+	<br />
 	<p>
-		<label for="recherche_id">Rechercher par un id</label><br />
+		<label for="recherche_id">Rechercher par un numéro</label><br />
 		<input type="text" id="recherche_id" />
 	</p>
+		<input type="checkbox" id="question_obligatoire_lier" /><label for="question_obligatoire_lier">Question obligatoire</label>
 	<br />
 	<p>
 		<input type="submit" id="enregistrer_lier" value="lier" />
-		<span id="info_enregistrer" style="color : green"></span>
-		<span id="erreur_enregistrer" style="color : red"></span>
+		<br />
+		<span id="info_enregistrer_lier" style="color : green"></span>
+		<span id="erreur_enregistrer_lier" style="color : red"></span>
 	</p>
 </div>
 <div id="ajouter_question" style="display : none">
@@ -109,13 +112,8 @@
 				data : {question : question, reponse : reponse, id_certification : $("#certification_demande").val(), question_obligatoire : question_obligatoire, reponse_ouverte : reponse_ouverte},
 				success : function(){
 					// On remet le formulaire à zero
-		    		var div = $("#question_reponse");
-		    		div.html('<p style="text-align : center"><label for="question_obligatoire">Question obligatoire : </label><input type="checkbox" id="question_obligatoire" /></p><br />');
-		    		div.append('<p style="margin-left : 0.7em; margin-bottom : 0.5em"><label class="ajouter_question_label" for="question">Question : </label><textarea id="question" class="question"></textarea></p>');
-		    		div.append('<p><label class="ajouter_question_label" for="reponse">Réponse 1: </label><textarea id="reponse" class="reponse"></textarea><input type="checkbox" id="reponse_juste" class="reponse_juste"/><label for="reponse_juste">Réponse juste</label></p>');
-		    		div.append('<p><label class="ajouter_question_label" for="reponse2">Réponse 2: </label><textarea id="reponse2" class="reponse"></textarea><input type="checkbox" id="reponse_juste" class="reponse_juste"/><label for="reponse_juste">Réponse juste</label></p>');
-		    		div.append('<div id="container_reponse"></div>');
-				
+					resetAddForm();
+					
 					// On affiche la confirmation
 					$("#info_enregistrer").html("Votre question a été enregistrée");
 	                $("#info_enregistrer").show();
@@ -135,6 +133,42 @@
     		});
     		
     		$("#container_reponse").append("<p><label class='ajouter_question_label' for='reponse"+nombre_reponse+"'>Réponse "+(nombre_reponse+1)+": </label><textarea id='reponse"+nombre_reponse+"' class='reponse'></textarea><input type='checkbox' class='reponse_juste' id='reponse_juste"+nombre_reponse+"'/><label for='reponse_juste"+nombre_reponse+"'>Réponse juste</label></p>");
+    	});
+    	
+    	// Lorsque on lie une question
+    	$("#enregistrer_lier").click(function(){
+			
+			// Si un des deux champs est vide
+			if($("#recherche_id").val() == "" || $("#recherche_question").val() == ""){
+				// On affiche une erreur
+				$("#erreur_enregistrer_lier").html("Veuillez renseigner un des deux champs");
+                $("#erreur_enregistrer_lier").show();
+                setTimeout(function() {
+                    $( "#erreur_enregistrer_lier" ).fadeOut("slow");
+                }, 2000 );    
+				return;
+			}
+			
+			// Lie la question à la certification
+			$.ajax({
+				type : 'post',
+				url : '/certifications/ajouteracertification',
+				data : {id_question : $("#recherche_id").val(), id_certification : $("#certification_demande").val(), question_obligatoire : $("#question_obligatoire_lier").attr('checked')},
+				success : function(){
+					// On affiche la confirmation
+					$("#info_enregistrer_lier").html("La question à bien été liée à la certification");
+	                $("#info_enregistrer_lier").show();
+	                setTimeout(function() {
+	                    $( "#info_enregistrer_lier" ).fadeOut("slow");
+	                }, 2000 );    
+	                
+	                // On remet les champs à zéro
+	                $("#recherche_question").val('');
+	                $("#recherche_id").val('');
+	                $("#question_obligatoire_lier").removeAttr('checked');
+				}
+			})
+			
     	});
     
         $("#tableau_question").flexigrid({
@@ -169,7 +203,55 @@
         });
         $(".ftitle").append('<span id="error" style="color : red">&nbsp;</span>');
         $(".ftitle").append('<span id="info" style="color : green">&nbsp;</span>');
-        
+               	
+        // Autocomplete de la question
+        $("#recherche_question, #recherche_id").autocomplete({
+            source: function(request, response){
+	            var objData = {};
+	            if($(this.element).attr('id') == 'recherche_id'){
+	                objData = {id : request.term, id_certification : $("#certification_demande").val(), maxRows : 10};
+	            }else{
+	                objData = {question : request.term, id_certification : $("#certification_demande").val(), maxRows : 10};
+	            }
+	        
+	            $.ajax({
+	               url : "/Autocomplete/autocompletequestion",
+	               dataType : "json",
+	               data : objData,
+	               type : 'POST',
+	               success : function(data){
+	                   // Ajout de reponse dans le cache
+	                   response($.map(data, function (item){
+	                       return{
+	                           label : item.id_question + " - " + item.question,
+	                           value: function (){
+									if ($(this).attr('id') == 'recherche_id'){
+										$('#recherche_question').val(item.question);
+										return item.id_question;
+									}
+									else{
+										$('#recherche_id').val(item.id_question);
+										return item.question;
+									}
+								}
+	                       }
+	                   }));
+	               }
+	            });                
+            },
+            minLength : 2,
+            delay : 0
+        });
+
+        function resetAddForm(){
+        	// Remet le formulaire d'ajout de question à zéro
+			var div = $("#question_reponse");
+    		div.html('<p style="text-align : center"><label for="question_obligatoire">Question obligatoire : </label><input type="checkbox" id="question_obligatoire" /></p><br />');
+    		div.append('<p style="margin-left : 0.7em; margin-bottom : 0.5em"><label class="ajouter_question_label" for="question">Question : </label><textarea id="question" class="question"></textarea></p>');
+    		div.append('<p><label class="ajouter_question_label" for="reponse">Réponse 1: </label><textarea id="reponse" class="reponse"></textarea><input type="checkbox" id="reponse_juste" class="reponse_juste"/><label for="reponse_juste">Réponse juste</label></p>');
+    		div.append('<p><label class="ajouter_question_label" for="reponse2">Réponse 2: </label><textarea id="reponse2" class="reponse"></textarea><input type="checkbox" id="reponse_juste" class="reponse_juste"/><label for="reponse_juste">Réponse juste</label></p>');
+    		div.append('<div id="container_reponse"></div>');
+        }
         
         function add_record(command, grid){
         
@@ -182,6 +264,9 @@
                 }, 2000 );
                 return;
             }  
+            
+            // On remet le formulaire à zéro
+            resetAddForm();
             
         	$("#ajouter_question").dialog({
         		title : "Ajouter une question",
@@ -197,51 +282,6 @@
         			}
         		]
         	});
-            /*
-            
-            $.ajax({
-                type : 'post',
-                url : '/Questions/getlistenomformate',
-                data : { 'id_certification' : $("#certification_demande").val()},
-                success : function(data){
-                    $("#select_question").html(data);
-                }
-            });
-            
-            $("#select_ajouter_question").dialog({
-                title : "Ajouter une question",
-                buttons : [
-                    {
-                        text : "Valider",
-                        click : function(){
-                            $.ajax({
-                                type : 'post',
-                                url : 'ajouteracertification',
-                                data : {
-                                    'id_certification' : $("#certification_demande").val(),
-                                    'id_question' : $("#select_question").val()
-                                },
-                                success : function(){
-                                    $("#tableau_question").flexReload();
-                                    $("#select_ajouter_question").dialog('close');
-                                    $("#info").html("Question ajoutée !");
-                                    $("#info").show();
-                                    setTimeout(function() {
-                                        $( "#info" ).fadeOut("slow");
-                                    }, 2000 );                                    
-                                }
-                            })
-                        }
-                    },
-                    {
-                        text : "Annuler",
-                        click : function(){
-                            $(this).dialog('close');
-                        }
-                    }
-                ]
-            });   
-*/
         }
         
         function edit_record(command, grid){
@@ -382,6 +422,7 @@
 
         	$("#lier_question").dialog({
         		title : "Lier une question",
+        		width : 400,
         		buttons : [
         			{
 						text : "Fermer",
@@ -393,71 +434,6 @@
         		]
         	});	
         	
-        	var cache = [];
-        	
-        	// Autocomplete de la question
-        	$("#recherche_question, #recherche_id").autocomplete({
-            source: function(request, response){
-                
-                // Si la réponse est dans le cache
-            	if (('FR' + '-' + request.term) in cache){
-    				response($.map(cache['FR' + '-' + request.term], function (item){
-    					return {
-    						label: item.id_question + " - " + item.question,
-    						value: function (){
-    							if ($(this).attr('id') == 'recherche_id'){
-									$('#recherche_question').val(item.question);
-									return item.id_question;
-								}
-								else{
-									$('#recherche_id').val(item.id_question);
-									return item.question;
-								}
-    						}
-    					}
-    				}));
-    			}
-    			
-    			// Sinon -> Requete Ajax
-                else{
-                    var objData = {};
-                    if($(this.element).attr('id') == 'recherche_id'){
-                        objData = {id : request.term, id_certification : $("#certification_demande").val(), maxRows : 10};
-                    }else{
-                        objData = {question : request.term, id_certification : $("#certification_demande").val(), maxRows : 10};
-                    }
-                
-                    $.ajax({
-                       url : "/Autocomplete/autocompletequestion",
-                       dataType : "json",
-                       data : objData,
-                       type : 'POST',
-                       success : function(data){
-                           // Ajout de reponse dans le cache
-						   cache[('FR' + '-' + request.term)] = data;
-                           response($.map(data, function (item){
-                               return{
-                                   label : item.id_question + " - " + item.question,
-                                   value: function (){
-										if ($(this).attr('id') == 'recherche_id'){
-											$('#recherche_question').val(item.question);
-											return item.id_question;
-										}
-										else{
-											$('#recherche_id').val(item.id_question);
-											return item.question;
-										}
-									}
-                               }
-                           }));
-                       }
-                    });
-                }                
-            },
-            minLength : 2,
-            delay : 0
-        });
-
         }
     });
 </script>
