--- a/application/views/scripts/faq/index.phtml
+++ b/application/views/scripts/faq/index.phtml
@@ -1,17 +1,10 @@
-<div id="content">
-	<div class="indent-main">
-		<h2>Foire aux questions</h2>
-		<div class="container">
-			<h3>Liste des questions</h3>
-				<div class="indent-main">
-				<?php
-					echo $this->faq;
-				?>
-				</div>
-		</div>
-	</div>
-</div>
 
+<h1>Foire aux questions</h1>
+
+<h5 class="h5_modifie">Liste des questions</h5>
+<?php
+echo $this->faq;
+?>
 <script type="text/javascript">
 	$(document).ready(function(){
 		
