--- a/application/views/scripts/formation/geteventdata.phtml
+++ b/application/views/scripts/formation/geteventdata.phtml
@@ -9,7 +9,7 @@
 </div>
 <br />
 <div id="rdv_data">
-	<h5 style = "border-bottom : 1px solid">Informations sur rendez-vous</h5><br />
+	<h5 style = "border-bottom : 1px solid">Informations sur le rendez-vous</h5><br />
 	<p>Date : <?php echo $this->date ?></p><br />
 	<p>Durée : <?php echo $this->duree ?></p><br />
 	<p>Formation : <?php echo $this->formation ?></p><br />
