--- a/application/views/scripts/utilisateurs/changepassword.phtml
+++ b/application/views/scripts/utilisateurs/changepassword.phtml
@@ -1,86 +1,89 @@
-<div id="content">
-	<div id="indent-main">
-		<h2>Changer de mot de passe </h2>
-		<div id="container">
-			<?php
-			    echo $this->form;
-			?>
-		</div>
-	</div>
-</div>
+
+
+<h5 class="h5_modifie">Changer de mot de passe </h2>
+<div id="label_changePassword">
+	<label for="old" class="optional">Ancien mot de passe :</label>
+	<label for="new" class="optional">Nouveau mot de passe :</label>
+	<label for="confirmation" class="optional">Confirmer le nouveau mot de passe :</label>
+</div> <!-- label_changePassword -->
+<div id="input_changePassword">
+	<input type="password" name="old" id="old" value="">
+	<input type="password" name="new" id="new" value="">
+	<input type="password" name="confirmation" id="confirmation" value="">	
+</div> <!-- input_changePassword -->
+
+<input type="submit" name="submit" id="submit_changePassword" value="Valider"><input type="submit" name="cancel" id="cancel_changePassword" value="Annuler">
+
+<p id="error_changePassword" style="color: red;display : none;"></p>
+<p id="info_changePassword" style="color: green;display : none;"></p>
 <input type="hidden" id="password_changed" value="<?php echo $this->password_changed ?>">
 <script type="text/javascript">
     $(document).ready(function(){
     
-    	$("dt").addClass('changePassword-left');
-    	$("dd").addClass('changePassword-right');
-    	        
-        $("#change_password").append("<p id='error' style='color: red;display : none;'></p>")
-        $("#change_password").append("<p id='info' style='color: green;display : none;'></p>")
-        
-        $("#cancel").click(function(){
+       
+        $("#cancel_changePassword").click(function(){
             location.href = "/utilisateurs";
             return false;
         });
         
-        $("#submit").click(function(){
-            
-            $.ajax({
-                type : 'post',
-                url : 'testpassword',
-                data : {'old' : $("#old").val()},
-                success : function(data){
-                    if(data != 'true'){
-                        $("#error").html('Votre ancien mot de passe est incorrect !');
-                        $("#error").show();
-                        setTimeout(function() {
-                            $("#error").fadeOut("slow");
-                        }, 2000 );
-                        return false;
-                    }
-                }
-            });
+        $("#submit_changePassword").click(function(){
             
             if($("#new").val().length < 6 || $("#new").val().length > 10){
-                $("#error").html('La taille de votre mot de passe doit être comprise entre 6 et 10 caractères !');
-                $("#error").show();
+                $("#error_changePassword").html('La taille de votre mot de passe doit être comprise entre 6 et 10 caractères !');
+                $("#error_changePassword").show();
                 setTimeout(function() {
-                    $("#error").fadeOut("slow");
+                    $("#error_changePassword").fadeOut("slow");
                 }, 2000 );
                 return false;
             }
             if($("#new").val() != $("#confirmation").val()){
-                $("#error").html('Votre nouveau mot de passe et sa confirmation ne correspondent pas !');
-                $("#error").show();
+                $("#error_changePassword").html('Votre nouveau mot de passe et sa confirmation ne correspondent pas !');
+                $("#error_changePassword").show();
                 setTimeout(function() {
                     $("#error").fadeOut("slow");
                 }, 2000 );
                 return false;
             }
             if($("#new").val() == $("#old").val()){
-                $("#error").html('Votre nouveau mot de passe ne doit pas être le même que l\'ancien !');
-                $("#error").show();
+                $("#error_changePassword").html('Votre nouveau mot de passe ne doit pas être le même que l\'ancien !');
+                $("#error_changePassword").show();
                 setTimeout(function() {
-                    $("#error").fadeOut("slow");
+                    $("#error_changePassword").fadeOut("slow");
                 }, 2000 );
                 return false;
             }
-            
-            $("#change_password").submit();
+        
+            $.ajax({
+                type : 'post',
+                url : 'testpassword',
+                data : {'old' : $("#old").val()},
+                success : function(data){
+                    if(data != 'true'){
+                        $("#error_changePassword").html('Votre ancien mot de passe est incorrect !');
+                        $("#error_changePassword").show();
+                        setTimeout(function() {
+                            $("#error_changePassword").fadeOut("slow");
+                        }, 2000 );
+                        return false;
+                    }else
+                       $("#change_password").submit();
+                }
+            });
+
                         
         });
         
         if($("#password_changed").val() == 'yes'){
-            $("#info").html('Votre password a été changé !');
-            $("#info").show();
+            $("#info_changePassword").html('Votre password a été changé !');
+            $("#info_changePassword").show();
             setTimeout(function() {
-                $("#info").fadeOut("slow");
+                $("#info_changePassword").fadeOut("slow");
             }, 2000 );            
         }else if($("#password_changed").val() == 'no'){
-        	$("#error").html('Une erreur c\'est produite');
-            $("#error").show();
+        	$("#error_changePassword").html('Une erreur c\'est produite');
+            $("#error_changePassword").show();
             setTimeout(function() {
-                $("#error").fadeOut("slow");
+                $("#error_changePassword").fadeOut("slow");
             }, 2000 );      
         }
         
