--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,66 +1,98 @@
 
 <?php echo $this->doctype();
 $user = new Zend_Session_Namespace('user');?>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Easylia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-    <link href="<?php APPLICATION_PATH?>/css/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css" />
-    <link href="<?php APPLICATION_PATH?>/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="<?php APPLICATION_PATH?>/css/layout.css" rel="stylesheet" type="text/css" />
-    <link href="<?php APPLICATION_PATH?>/css/flexigrid.css" rel="stylesheet" type="text/css" />
-    <link href="<?php APPLICATION_PATH?>/css/flexigrid.pack.css" rel="stylesheet" type="text/css" />
-    <link href="<?php APPLICATION_PATH?>/css/fullcalendar.css" rel="stylesheet" type="text/css" />
-    <script src="<?php APPLICATION_PATH?>/js/jquery.1.6.2.min.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/cufon-yui.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/cufon-replace.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/Humnst777_BT_700.font.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/Myriad_Pro_400.font.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/flexigrid.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/flexigrid.pack.js" type="text/javascript"></script>
-    <script src="<?php APPLICATION_PATH?>/js/wtootltip.js" type="text/javascript"></script>
-    <script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery.slideshow.js"></script>  
-    <script type="text/javascript" src="<?php APPLICATION_PATH?>/js/script.js"></script>     
-	<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery-ui-1.8.16.custom.min.js"></script>
-	<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery.jcountdown1.3.2.js"></script>	
-	<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/timepicker.js"></script>	
-	<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/fullcalendar.js"></script>  
-</head>
-
-<body id="page1">
-<div class="right_bgd"></div>
-<div class="tail-top">
-    <div class="main">
-        <div id="header">
-        	<a href="#"><img alt="" src="<?php APPLICATION_PATH?>/images/rss.gif" class="rss" /></a>
-            <form action="" id="form1">
-                <div class="indent"></div>
-            </form>
-                <div class="indent1">
-                	<div class="container">
-                    	<ul>
-                            <li><a href="http://dev.easylia.com" class="current">Accueil</a></li>
-                              <li><a href="/utilisateurs">Profil</a></li>
-                        </ul>
-                    </div>
-                    <a href="http://dev.easylia.com"><img alt="" src="<?php APPLICATION_PATH?>/images/logo.jpg" class="logo" /></a><br />
-                </div>
-            </div>
-<?php
- echo $this->layout()->content; 
- ?>
-
- <div id="footer">
-    	
- </div>
-</div>
-
-
-</body>
+<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'> 
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="#LANG" lang="#LANG" dir="#LANG_DIR">
+	<head> 
+	    <title>Easylia</title>
+	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	    <meta http-equiv="Content-Style-Type" content="text/css" />
+	    <link href="<?php APPLICATION_PATH?>/css/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css" />
+	    <link href="<?php APPLICATION_PATH?>/css/style.css" rel="stylesheet" type="text/css" />
+	    <link href="<?php APPLICATION_PATH?>/css/flexigrid.css" rel="stylesheet" type="text/css" />
+	    <link href="<?php APPLICATION_PATH?>/css/fullcalendar.css" rel="stylesheet" type="text/css" />
+	    <link rel="icon" type="image/png" href="<?php APPLICATION_PATH ?>/images/favicon.ico" />
+	    <script src="<?php APPLICATION_PATH?>/js/jquery.1.6.2.min.js" type="text/javascript"></script>
+	    <script src="<?php APPLICATION_PATH?>/js/flexigrid.js" type="text/javascript"></script>
+	    <script src="<?php APPLICATION_PATH?>/js/wtootltip.js" type="text/javascript"></script>
+	    <script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery.slideshow.js"></script>  
+	    <script type="text/javascript" src="<?php APPLICATION_PATH?>/js/script.js"></script>     
+		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery-ui-1.8.16.custom.min.js"></script>
+		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/jquery.jcountdown1.3.2.js"></script>	
+		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/timepicker.js"></script>	
+		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/fullcalendar.js"></script>  
+	</head>
+	
+	<body class="page_sommaire">
+		<div id="page">
+			<div class="right_bgd"></div>	<!-- right_bgd -->
+				<div id="header">
+					<div id="onglets">
+						<ul>
+	                    	<li class="menu-entree item first">
+								<a href="http://spip.easylia.com/" >Accueil</a>
+							 </li>
+							<li class="menu-entree item">
+								<a href="Installation" >Installation</a>
+							</li>
+							<li class="menu-entree item">
+								<a href="Formation" >Formation</a>
+							</li>		
+							<li class="menu-entree item">
+								<a href="Assistance" >Assistance</a>
+							</li>	
+							<li class="menu-entree item">
+								<a href="Tarifs" >Tarifs</a> 
+							 </li>	
+							<li class="menu-entree item">
+								<a href="Contact">Contact</a>		 
+							 </li>		
+							<li class="menu-entree item item_formateur">
+								<a href="Devenir-formateur">Devenir <br />formateur</a>		                
+							</li>
+						</ul>	   
+					</div> <!-- onglets -->
+					<div id="header_content">
+						<div id="logo">
+							<a href="http://dev.easylia.com"><img alt="" src="<?php APPLICATION_PATH?>/images/logo.jpg" class="logo" /></a><br />
+						</div> <!-- logo -->
+						<div id="search">
+							<h2>0810 123 456</h2>
+							<form action="" id="form1">
+								<p>
+									<input type="text" class="input" value="Rechercher…" onblur="if(this.value=='') this.value='Rechercher…'" onfocus="if(this.value =='Rechercher…' ) this.value=''"  />
+									<a href="#" onclick="document.getElementById('form1').submit()"><img alt="" src="<?php APPLICATION_PATH ?>/images/button.gif" /></a>
+								</p>
+							</form>
+						</div> <!-- search -->
+					</div> <!-- header_content -->
+				</div> <!-- header -->
+				<div id="content">
+					<div id="content-main">
+						<?php
+							 echo $this->layout()->content; 
+						 ?>
+					</div> <!-- content-main> -->
+				</div> <!-- content -->
+			<div id="footer">
+				<div id="footer_content">
+					<div id="footer_content_left">
+						<p><span class="h3" style="margin-rigth: 0.5em;">Easylia</span> &copy; 2012</p>
+					</div>
+					<div id="footer_content_right">
+						<h1 style="margin-bottom: 0;">0810 123 456</h1>
+						<p>Prix d'un appel local</p>
+					</div> <!-- footer_content_right -->
+				</div> <!-- footer-content -->
+			</div> <!-- footer -->
+		</div><!--Fin Page -->
+	</body>		
+</html>	
 <script type="text/javascript">
+$(document).ready(function(){
 
-    $(document).ready(function(){
+		// Infobulle sur les liens
+		$("a").wTooltip();
 
          var isLogged = false;
          <?php
@@ -115,21 +147,20 @@ $user = new Zend_Session_Namespace('user');?>
        }
 
     });
-
-
-</script>
-<script type="text/javascript">
+    
 	// google analytics
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-23892247-1']);
-  _gaq.push(['_setDomainName', '.easylia.com']);
-  _gaq.push(['_trackPageview']);
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-23892247-1']);
+	_gaq.push(['_setDomainName', '.easylia.com']);
+	_gaq.push(['_trackPageview']);
+	
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+
 
 </script>
 
