--- a/application/views/scripts/utilisateurs/connexion.phtml
+++ b/application/views/scripts/utilisateurs/connexion.phtml
@@ -1,24 +1,13 @@
-<div id="content">
-	<div id="indent-main">
-		<h2>Connexion</h2>
-		<div id="form-connexion">
-		<?php
-		
-		$this->form->setAction($this->url());
-		echo $this->form;
-		
-		echo $this->error;
-		
-		?>
-	</div></div>
-</div>
 
-<script type="text/javascript">
-	$(document).ready(function(){
-		$("dt").addClass("connexion-left");
-		$("dd").addClass("connexion-right");
-		
-        $("#login-label > label").attr("id","connexion-login");
-        $("#password-label > label").attr("id","connexion-password");
-	});
-</script>
+<h4 class="h5_modifie">Connexion</h4>
+<form enctype="application/x-www-form-urlencoded" method="post" action="/Utilisateurs/connexion">
+	<div id="label_login">
+		<label for="login" class="required">Nom d'utilisateur :</label>
+		<label for="password" class="required">Mot de passe :</label>
+	</div> <!-- label_login -->
+	<div id="input_login">
+		<input type="text" name="login" id="login" value="" />
+		<input type="password" name="password" id="password" value="" />
+	</div> <!-- input_login -->
+	<input type="submit" name="submit" id="submit_login" value="Connexion" />
+</form>
